@@ -2,13 +2,14 @@ package com.eureka.movement.service;
 
 import com.eureka.movement.dto.AccountReportDTO;
 import com.eureka.movement.dto.ClientAccountReportsDTO;
-import com.eureka.movement.model.Cuenta;
-import com.eureka.movement.model.Movimiento;
-import com.eureka.movement.repository.CuentaRepository;
-import com.eureka.movement.repository.MovimientoRepository;
+import com.eureka.movement.model.Account;
+import com.eureka.movement.model.Movement;
+import com.eureka.movement.repository.AccountRepository;
+import com.eureka.movement.repository.MovementRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
@@ -17,35 +18,53 @@ import java.util.List;
 public class ReportService {
 
     @Autowired
-    private CuentaRepository cuentaRepository;
+    private AccountRepository accountRepository;
 
     @Autowired
-    private MovimientoRepository movimientoRepository;
+    private MovementRepository movementRepository;
 
-    public ClientAccountReportsDTO generateAccountReport(String clienteId, Date startDate, Date endDate) {
-        List<Cuenta> cuentas = cuentaRepository.findByClienteId(clienteId);
-        List<AccountReportDTO> accountReports = new ArrayList<>();
+    public ClientAccountReportsDTO generateAccountReport(String clientId, Date startDate, Date endDate) {
+        List<Account> accounts = accountRepository.findByClienteId(clientId);
 
-        for (Cuenta cuenta : cuentas) {
-            List<Movimiento> movimientos = movimientoRepository.findByCuentaIdAndFechaBetween(cuenta.getId().toString(), startDate, endDate);
-            double totalMovimientos = movimientos.stream().mapToDouble(Movimiento::getValor).sum();
+        List<AccountReportDTO> accountReports = accounts.stream()
+                .map(account -> generateAccountReportDTO(account, startDate, endDate))
+                .toList();
 
-            AccountReportDTO accountReport = new AccountReportDTO();
-            accountReport.setNumeroCuenta(cuenta.getNumeroCuenta());
-            accountReport.setTipo(cuenta.getTipoCuenta());
-            accountReport.setSaldoInicial(cuenta.getSaldoInicial());
-            accountReport.setEstado(cuenta.getEstado());
-            accountReport.setMovimiento(totalMovimientos);
-            accountReport.setSaldoDisponible(cuenta.getSaldoInicial()-totalMovimientos);
+        return buildClientAccountReportsDTO(accounts, accountReports);
+    }
 
-            accountReports.add(accountReport);
-        }
+    private AccountReportDTO generateAccountReportDTO(Account account, Date startDate, Date endDate) {
+        List<Movement> movements = movementRepository.findByAccountIdAndDateBetween(
+                account.getId().toString(), startDate, endDate);
+        BigDecimal totalMovements = calculateTotalMovements(movements);
 
+        return buildAccountReportDTO(account, totalMovements);
+    }
+
+    private BigDecimal calculateTotalMovements(List<Movement> movements) {
+        return movements.stream()
+                .map(Movement::getValue)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+    }
+
+    private AccountReportDTO buildAccountReportDTO(Account account, BigDecimal totalMovements) {
+        AccountReportDTO accountReport = new AccountReportDTO();
+        accountReport.setAccountNumber(account.getAccountNumber());
+        accountReport.setType(account.getAccountType());
+        accountReport.setInitialBalance(account.getInitialBalance());
+        accountReport.setState(account.getState());
+        accountReport.setMovement(totalMovements);
+        accountReport.setAvailableBalance(account.getInitialBalance().subtract(totalMovements));
+
+        return accountReport;
+    }
+
+    private ClientAccountReportsDTO buildClientAccountReportsDTO(List<Account> accounts, List<AccountReportDTO> accountReports) {
         ClientAccountReportsDTO clientReport = new ClientAccountReportsDTO();
         clientReport.setReportDate(new Date());
-        clientReport.setCliente(cuentas.isEmpty() ? "Unknown" : cuentas.get(0).getClienteId());
+        clientReport.setClient(accounts.isEmpty() ? "Unknown" : accounts.getFirst().getClientId());
         clientReport.setAccountReports(accountReports);
-
         return clientReport;
     }
+
 }
